Bugfix on mobile device.

--- a/client/app/sass/elyoos/home/_blogDetail.scss
+++ b/client/app/sass/elyoos/home/_blogDetail.scss
@@ -1,6 +1,6 @@
 #blog-detail {
   z-index: 150;
-
+  min-width: 300px;
   #blog-header {
     height: 72px;
     min-width: 300px;
